# mellea

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DOCS_IMPROVEMENT_PLAN.md  DOCS_IMPROVEMENT_PLAN_REVIEW.md  DOCS_IMPROVEMENT_PLAN_REVIEW_THIRD_PASS.md  Makefile  PR_430_REVIEW.md  PR_DESCRIPTION.md  PR_DESCRIPTION_COVERAGE.md  README.md  api-reference.html  api.html  examples.html  granite_refs.txt  granite_refs_clean.txt  index.html  inspect_watsonx_model.py  issue_add_code_coverage.md  issue_dependency_friendly.md  issue_deprecation_warnings.md  issue_granite_migration.md  issue_maintenance_cleanup.md  issue_pillow_deprecation.md  issue_resource_leaks.md  issue_test_async_fixes.md  issue_test_maintenance.md  issue_unawaited_coroutines.md  issue_upstream_dependency_deprecations.md  list_watsonx_models.py  llms.txt  mellea_api_docs_review.md  pr_template_unawaited_coroutines.md  pyproject.toml  search-index.json  search.html  (+5 more)
.agents/skills/audit-markers/: SKILL.md
.agents/skills/estimate-vram/: SKILL.md
.agents/skills/skill-author/: SKILL.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs-autogen-pr.yml
advanced/: custom-components.html  inference-time-scaling.html  intrinsics.html  lora-and-alora-adapters.html  mellea-core-internals.html  prefix-caching-and-kv-blocks.html  template-formatting.html
api/mellea/: backends.html  core.html  formatters.html  helpers.html  plugins.html  stdlib.html  telemetry.html
api/mellea/backends/: backend.html  cache.html  model_ids.html  model_options.html  tools.html
api/mellea/core/: backend.html  base.html  formatter.html  requirement.html  sampling.html  utils.html
api/mellea/formatters/: chat_formatter.html  template_formatter.html
api/mellea/helpers/: async_helpers.html  openai_compatible_helpers.html  (+1 more)
assets/css/: styles.918f237b.css
assets/js/: 027b6bcd.167cdaf7.js  027b6bcd.de76c424.js  04a23318.557e5832.js  04a23318.5b1dd177.js  061c0e59.1d263c46.js  061c0e59.9742c483.js  0abc2c25.debb4d38.js  0abc2c25.e5a87d61.js  0c502142.52b10140.js  0c502142.b49c07d5.js  0e3e426f.2b649b3c.js  0e3e426f.d662f265.js  0f0879a7.1136d592.js  0f0879a7.88f4a20e.js  104dfc3f.20bf44ca.js  104dfc3f.c7e4a754.js  133570d0.2f16988d.js  133570d0.bf2ed95b.js  1736cbe2.3a8af5cc.js  1736cbe2.d1e7899e.js  177b7f50.8bbf69ff.js  177b7f50.ec34c430.js  17896441.a27527e9.js  179d2bf0.142658f2.js  179d2bf0.c61392ee.js  17aae5c1.dac06ed7.js  17aae5c1.f1fbfeb2.js  17e8aa27.0ab9e868.js  17e8aa27.4df7facd.js  19ceac12.55ae4ae2.js  19ceac12.7921142c.js  1a56c854.ae41cf5d.js  1a56c854.f70b0c1f.js  1c197fb8.05c60b64.js  1c197fb8.064e768f.js  21f4250d.3997cd0b.js  21f4250d.7409ebfe.js  2237.96fad8b2.js  22c843fb.1842b70a.js  22c843fb.a42fa356.js  (+263 more)
cli/alora/: commands.py  train.py
community/: building-extensions.html  code-of-conduct.html  contributing-guide.html
concepts/: architecture-vs-agents.html  context-and-sessions.html  generative-functions.html  generative-programming.html  instruct-validate-repair.html  mobjects-and-mify.html  plugins.html  requirements-system.html
docs/: AGENTS_TEMPLATE.md  PUBLISHING.md  alora.md  docusaurus.config.ts
docs/docs/: docs.json
docs/examples/: conftest.py  hello_world.py
docs/metrics/: coverage-baseline.json  coverage-current.json  docstring-baseline.txt
examples/: data-extraction-pipeline.html  legacy-code-integration.html  resilient-rag-fallback.html  traced-generation-loop.html
getting-started/: installation.html  quickstart.html
how-to/: act-and-aact.html  backends-and-configuration.html  build-a-rag-pipeline.html  configure-model-options.html  enforce-structured-output.html  evaluate-with-llm-as-a-judge.html  generative-functions.html  handling-exceptions.html  m-decompose.html  refactor-prompts-with-cli.html  safety-guardrails.html  tools-and-agents.html  unit-test-generative-code.html  use-async-and-streaming.html  use-context-and-sessions.html  use-images-and-vision.html  working-with-data.html  write-custom-verifiers.html
integrations/: bedrock.html  huggingface.html  langchain.html  m-serve.html  mcp.html  ollama.html  openai.html  smolagents.html  vertex-ai.html  watsonx.html
mellea/backends/: huggingface.py  kv_block_helpers.py  litellm.py  ollama.py  openai.py  watsonx.py
mellea/core/: requirement.py  utils.py
observability/: logging.html  metrics.html  telemetry.html  tracing.html
reference/: cli.html  glossary.html
test/: MARKERS_GUIDE.md  README.md  conftest.py  predicates.py
test/backends/: test_bedrock.py  test_huggingface.py  test_huggingface_tools.py  test_litellm_ollama.py  test_litellm_watsonx.py  test_mellea_tool.py  test_ollama.py  test_openai_ollama.py  test_openai_unit.py  test_openai_vllm.py  test_tool_calls.py  test_vision_ollama.py  test_vision_openai.py  test_vllm.py  test_vllm_tools.py  test_watsonx.py
test/cli/: test_alora_train.py  test_alora_train_integration.py
test/core/: test_astream_exception_propagation.py  test_astream_incremental.py  test_component_typing.py  test_model_output_thunk.py  test_stream_validate.py
test/package/: test_dependency_isolation.py
test/plugins/: test_hook_call_sites.py  test_payloads.py
test/stdlib/: test_chat_view.py  test_functional.py  test_session.py  test_spans.py
test/telemetry/: test_logging.py  test_metrics.py  test_metrics_backend.py  test_metrics_plugins.py  test_metrics_token.py  test_tracing.py  test_tracing_backend.py
tooling/docs-autogen/: PHASE4_IMPLEMENTATION_SUMMARY.md  README.md  audit_coverage.py  build.py  decorate_api_mdx.py  find_orphans.py  generate-ast.py  requirements.txt  test_anchor_collisions.py  test_cross_references.py  test_escape_mdx.py  test_mintlify_anchors.py  test_validate.py  validate.py
troubleshooting/: common-errors.html  faq.html
tutorials/: making-agents-reliable.html  mifying-legacy-code.html  streaming-and-async.html  streaming-validation.html  using-generative-stubs.html  your-first-generative-program.html
(+300 files in other folders)
